<?xml version="1.0" encoding="utf-8"?>
<com.google.android.material.card.MaterialCardView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/cv_book"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="@dimen/content_margin"
    android:clickable="true"
    app:cardElevation="@dimen/elevation"
    app:contentPadding="@dimen/content_margin">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="horizontal"
        android:gravity="center_vertical">

        <ImageView
            android:id="@+id/iv_book_thumbnail"
            android:layout_width="@dimen/thumb_prev_width"
            android:layout_height="@dimen/thumb_prev_height"
            android:contentDescription="@string/book_thumbnail" />

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/content_margin"
            android:layout_weight="1"
            android:orientation="vertical"
            android:layout_gravity="center_vertical">

            <com.google.android.material.textview.MaterialTextView
                android:id="@+id/tv_book_title"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ellipsize="end"
                android:maxLines="3"
                android:text="@string/title"
                android:textAppearance="@style/TextAppearance.Material3.TitleMedium" />

            <com.google.android.material.textview.MaterialTextView
                android:id="@+id/tv_book_author"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/text_margin"
                android:ellipsize="end"
                android:maxLines="1"
                android:text="@string/author"
                android:textAppearance="@style/TextAppearance.Material3.BodyMedium" />

        </LinearLayout>

        <LinearLayout
            android:id="@+id/ll_read_progress"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_gravity="center_vertical"
            android:layout_margin="@dimen/content_margin"
            android:orientation="vertical"
            android:gravity="center_vertical">

            <com.google.android.material.progressindicator.CircularProgressIndicator
                android:id="@+id/pi_read_progress"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:indeterminate="false"
                android:max="100"
                android:min="0"
                app:trackThickness="6dp" />

            <com.google.android.material.textview.MaterialTextView
                android:id="@+id/tv_read_progress"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/ph_percentage"
                android:textAlignment="center"
                android:textAppearance="@style/TextAppearance.Material3.BodyMedium" />

        </LinearLayout>

    </LinearLayout>

</com.google.android.material.card.MaterialCardView>